<resources>
    <string name="app_name">Tarefa Kotlin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="nome">Nome</string>
    <string name="e_mail">E-mail</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="informe_dados_corretamente">Algum dos dados não foi preenchido!</string>
    <string name="email_existe">E-mail já está em uso!</string>
    <string name="erro_generico">Algo de errado aconteceu! Tente Novamente!</string>
    <string name="cadastro_sucesso">Cadastro foi um sucesso!</string>
    <string name="atualizacao_sucesso">Atualização foi um sucesso!</string>
    <string name="usuario_invalido">Usuário inválido!</string>
    <string name="entrar">Entrar</string>
    <string name="usuario_senha_incorreto">Usuário e/ou senha incorretos!</string>
    <string name="senha">Senha</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="descricao">Descrição</string>
    <string name="dados_invalidos">Dados inválidos!</string>
    <string name="tarefa_removida_sucesso">Tarefa removido com sucesso!</string>
    <string name="atualizar_tarefa">Atualizar tarefa</string>
    <string name="email_nao_valido">E-mail não é válido.</string>
    <string name="senha_mais_5_caracteres">A senha deve possuir mais de 5 caracteres!</string>
    <string name="nao_imagem">Não possue Imagem!</string>
    <string name="problema_imagem_generico">Problema não recuperação da imagem!</string>
</resources>
