<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.CadastroUsuarioActivity"
        android:layout_margin="5mm">

    <EditText
            android:id="@+id/editNomeCadastroUsuario"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center"
            android:hint="@string/nome"
    />

    <EditText
            android:id="@+id/editEmailCadastroUsuario"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editNomeCadastroUsuario"
            android:gravity="center"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
    />

    <EditText
            android:id="@+id/editPasswordCadastroUsuario"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editEmailCadastroUsuario"
            android:gravity="center"
            android:hint="@string/senha"
            android:inputType="textPassword"
    />
    
    <Button
            android:id="@+id/buttonSaveCadastroUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cadastrar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editPasswordCadastroUsuario"
            android:layout_marginTop="10mm"
    />

</android.support.constraint.ConstraintLayout>