<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.LoginActivity"
        android:layout_margin="5mm">

    <EditText
            android:id="@+id/editLoginEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center"
            android:hint="@string/e_mail"
    />

    <EditText
            android:id="@+id/editLoginSenha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editLoginEmail"
            android:gravity="center"
            android:hint="@string/senha"
            android:inputType="textEmailAddress"
    />

    <Button
            android:id="@+id/buttonLoginUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entrar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editLoginSenha"
            android:layout_marginTop="10mm"
    />

    <TextView
            android:id="@+id/textViewLoginCadastrarUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Não tenho usuário"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonLoginUsuario"
            android:layout_marginTop="2.5mm"
    />

</android.support.constraint.ConstraintLayout>